# test2

./: CMakeLists.txt  krsri2025.xml  package.xml
config/: controller.yaml  gait_param.yaml  joint_pose.yaml  trajectory_params.yaml
controller/: krsri_controller.cpp
controller/include/: krsri_controller.hpp
description/launch/: controller_spawn.launch.py  send_trajectory.launch.py  view.launch.py
description/meshes/collision/: coxa.stl  tibia.stl
description/meshes/visual/: coxa.dae  tibia.dae
description/ros2_control/: robot.ros2_control.xacro
description/rviz/: view_robot.rviz
description/urdf/: #robot.urdf#  robot.urdf  robot.xacro
description/urdf/base/: base.xacro
description/urdf/coxa_link/: coxa_link.gazebo  coxa_link.transmission.xacro  coxa_link.xacro
description/urdf/end_effector/: end_effector.xacro
description/urdf/femur_link/: femur_link.gazebo  femur_link.transmission.xacro  femur_link.xacro
description/urdf/gz/: gz.xacro
description/urdf/imu/: imu.gazebo  imu.xacro
description/urdf/inc/: create_link.xacro
description/urdf/ros2_control/: krsri.ros2_control.xacro
description/urdf/tibia_link/: tibia_link.gazebo  tibia_link.transmission.xacro  tibia_link.xacro
hardware/: krsri2025_hardware.cpp
hardware/include/: krsri2025_hardware.hpp
log/: latest_list
src/: krsri2025_node.cpp
trajectory_generator/: #foot_trajectory.cpp#  .#foot_trajectory.cpp  .clang-format  send_trajectory.cpp
trajectory_generator/include/: bezier_curve.hpp  cTypes.hpp  cppTypes.hpp  foot_trajectory.hpp  interpolation.hpp
